objects/CMPL123__Valid_Child_Status__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Child_Relationship__c</fullName>
        <label>Child Relationship</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Workflow_Step__c</fullName>
        <label>Parent Workflow Step</label>
        <referenceTo>CMPL123__WF_Step__c</referenceTo>
        <relationshipLabel>Valid Child Statuses</relationshipLabel>
        <relationshipName>Valid_Child_Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CMPL123__Required_Child_Workflow_Status__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Required Child Workflow Status</label>
        <referenceTo>CMPL123__WF_Status__c</referenceTo>
        <relationshipLabel>Valid Child Statuses</relationshipLabel>
        <relationshipName>Valid_Child_Statuses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__Valid_Child_Status_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Valid Child Status External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Valid Child Status</label>
    <nameField>
        <displayFormat>VCS-{00000}</displayFormat>
        <label>Valid Child Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Valid Child Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>